# master_thesis_program

./: CMakeLists.txt  LICENSE  README.md  package.xml
launch/: subjectA_device.launch
msg/: Answers.msg  Info.msg
scripts/: constant_rate.py
src/: control.cpp  control.h  emotions.h  experiment_signals.h  practice.cpp  practice.h  subjectA.cpp  subjectA.h  subjectB.cpp  subjectB.h
